--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "cookie-parser": "^1.4.4",
+    "dotenv": "^16.0.3",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
